--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,6 @@
   
   <div class="wrapper">
 
-    <!-- <header class="header">
-        <nav>
-          <ul class="menu__list" id="menu">
-            <li data-menuanchor="section-2"><a href="#section-2" class="menu__link">О компании</a></li>
-            <li data-menuanchor="section-3"><a href="#section-3" class="menu__link">Технология производства</a></li>
-            <li data-menuanchor="section-4"><a href="#section-4" class="menu__link">Преимущества продукции</a></li>
-            <li data-menuanchor="section-5"><a href="#section-5" class="menu__link">Каталог</a></li>
-          </ul>
-        </nav>
-    </header> -->
-
     <div class="nav-toggle">
       <div class="nav-toggle-bar"></div>
     </div>
@@ -89,43 +78,47 @@
 
           <div class="advantage__content">
             <div class="section__title title--center">Преимущества продукции</div>
-            <div class="advantage__list">
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  без красителей и консервантов
-                </div> 
-              </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  без вредных добавок
-                </div> 
-              </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  укрепляет иммунитет
-                </div> 
-              </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  полезно для детей
-                </div> 
-              </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  SUPER FOOD
+
+              <div class="advantage__list">
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    без красителей и консервантов
+                  </div> 
+                </div>
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    без вредных добавок
+                  </div> 
+                </div>
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    укрепляет иммунитет
+                  </div> 
+                </div>
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    полезно для детей
+                  </div> 
+                </div>
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    без глютена
+                  </div> 
+                </div>
+                <div class="advantage-item">
+                  <div class="advantage-item__text">
+                    VEGAN
+                  </div> 
                 </div>
               </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  без глютена
-                </div> 
+
+              <div class="advantage__wrapper">
+                <div class="advantage__text">
+                  <p>Вся продукция "ЭкоЛето" экологичная, полезная, богатая натуральными витаминами и микроэлементами. </p>
+                  <p>Фруктовые и овощные чипсы и сушеные ягоды обладают всеми свойствами свежих продуктов.</p>
+                </div>
               </div>
-              <div class="advantage-item">
-                <div class="advantage-item__text">
-                  VEGAN
-                </div> 
-              </div>
-            </div>
+
           </div>
           <!-- /.advantage__content -->
 
@@ -139,7 +132,273 @@
 
         <div class="container">
 
-          5-й слайд
+            <div class="catalog__wrapper">
+              <div class="catalog__title">Солнце тропиков</div>
+              <div class="catalog__list">
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Манго</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/mango.jpg" alt="Манго">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Апельсин</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/apelsin.jpg" alt="Апельсин">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Ананас</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/ananas.jpg" alt="Ананас">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Банан</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/banan.jpg" alt="Банан">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Инжир</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/ingir.jpg" alt="Инжир">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <!-- /.catalog__list -->
+            </div>
+            <!-- /.catalog__wrapper -->
+
+        </div>
+        <!-- /.container -->
+
+      </div>
+      <!-- /.section -->
+
+      <div class="section" id="catalog-2">
+
+        <div class="container">
+
+            <div class="catalog__wrapper">
+              <div class="catalog__title">Спелые фрукты</div>
+              <div class="catalog__list">
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Дыня</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/dina.jpg" alt="Дыня">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Яблоко</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/iabloko.jpg" alt="Яблоко">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Арбуз</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/arbuz.jpg" alt="Арбуз">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Груша</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/grusha.jpg" alt="Груша">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Хурма</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/hurma.jpg" alt="Хурма">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Микс</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/mix.jpg" alt="Микс">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <!-- /.catalog__list -->
+            </div>
+            <!-- /.catalog__wrapper -->
+
+        </div>
+        <!-- /.container -->
+
+      </div>
+      <!-- /.section -->
+
+      <div class="section" id="catalog-3">
+
+        <div class="container">
+
+            <div class="catalog__wrapper">
+              <div class="catalog__title">Дары природы</div>
+              <div class="catalog__list">
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Брусника</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/brusnika.jpg" alt="Брусника">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Лимонник</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/limonnik.jpg" alt="Лимонник">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Облепиха</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/oblepiha.jpg" alt="Облепиха">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Шиповник</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/shipovnik.jpg" alt="Шиповник">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Смородина</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/smorodina.jpg" alt="Смородина">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="catalog-item">
+                  <div class="catalog-item__wrapper">
+                    <div class="catalog-item__title">Клубника</div>
+                    <div class="catalog-item__img">
+                      <img src="img/catalog/klubnika.jpg" alt="Клубника">
+                    </div>
+                    <div class="catalog-item__footer">
+                      <button class="catalog-item__details-btn">Подробнее</button>
+                      <button class="catalog-item__order-btn">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <!-- /.catalog__list -->
+            </div>
+            <!-- /.catalog__wrapper -->
 
         </div>
         <!-- /.container -->
