--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   <title>Эко-лето</title>
   <link rel="stylesheet" href="fonts/stylesheet.css">
   <link rel="stylesheet" href="css/jquery.fullpage.css">
-  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -49,7 +48,7 @@
               <p>Основная ассортиментная линейка - производство дегидрированных фруктовых и овощных чипсов и сушеной ягоды.</p>
               <p>Сушка производится при низких температурах до 40 градусов, что позволяет сохранить витамины и полезные микроэлементы свежих фруктов, овощей, ягод в конечном продукте.</p>
             </div>
-            <div class="section__logo">
+            <div class="company__logo">
               <img src="img/logo.png" alt="ЭкоЛето">
             </div>
           </div>
@@ -457,7 +456,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/jquery.fullpage.js"></script>
-  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
